# yahoo-finance-data

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  com.market-data.fetch.plist  docker-compose.yml  install_schedule.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: competitive-analysis.md
nginx/: nginx.conf
src/market_data/: __init__.py  ai_summary.py  alerts.py  api.py  cache.py  cli.py  config.py  duckdb_reader.py  exceptions.py  fetcher.py  fundamentals.py  fundamentals_store.py  indicators.py  logging_config.py  news.py  notifications.py  portfolio.py  quality.py  rate_limit_db.py  rate_limiter.py  schemas.py  server.py  store.py  watchlist.py
src/market_data/providers/: __init__.py  base.py  fmp.py  tiingo.py  twelvedata.py  yfinance.py
tests/: conftest.py  test_ai_summary.py  test_alerts.py  test_api.py  test_auth.py  test_cache.py  test_cli.py  test_duckdb_reader.py  test_export.py  test_fetcher.py  test_fundamentals.py  test_fundamentals_store.py  test_indicators.py  test_news.py  test_notifications.py  test_portfolio.py  test_providers.py  test_quality.py  test_rate_limit_db.py  test_rate_limiter.py  test_search.py  test_server.py  test_store.py  test_twelvedata_provider.py  test_watchlist.py
web/: .env.example  .oxlintrc.json  .prettierrc.json  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AISummary.tsx  (+20 more)
(+8 files in other folders)
