[project]
name = "market-data"
version = "0.1.0"
description = "Shared Yahoo Finance market data provider for local Python projects"
readme = "README.md"
authors = [{ name = "Jeremy Gu", email = "jgu@apra.com.au" }]
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "requests>=2.31",
]

[project.scripts]
market-data = "market_data.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
    "httpx>=0.28.1",
    "types-requests>=2.31",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["yfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
